Fix z-index of date range flyout

--- a/src/css/DateRangeField.css
+++ b/src/css/DateRangeField.css
@@ -67,6 +67,10 @@
   outline: none;
 }
 
+.date-range-field .date-range-flyout {
+  z-index: 81;
+}
+
 .date-range-field .rdr-MonthAndYear-innerWrapper {
   padding-top: 4px !important;
   height: 32px !important;
